Feat: UserController 작성

--- a/be/.gitignore
+++ b/be/.gitignore
@@ -25,6 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+/src/main/**/application.properties
+/src/main/**/application.yml
 
 ### NetBeans ###
 /nbproject/private/
