--- a/fe/package.json
+++ b/fe/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.2"
+    "react-router-dom": "^6.28.2",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
