--- a/fe/nginx/default.conf
+++ b/fe/nginx/default.conf
@@ -9,6 +9,20 @@ server {
         try_files $uri /index.html;
     }
 
+    location /spring/ {
+        proxy_pass http://spring:8081/;  # ✅ 도커 네트워크의 spring 컨테이너로 연결
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /flask/ {
+        proxy_pass http://flask:5000/;  # ✅ 도커 네트워크의 spring 컨테이너로 연결
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     # 서비스 워커 캐싱 방지 (최신 버전 유지)
     location /sw.js {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
