S12P11E104-489 Feat: 비밀번호 찾기 기능 추가
- 사용자가 아이디와 이메일을 입력하면, 해당 이메일로 비밀번호 재설정 링크를 전송하도록 구현
- 이메일 전송을 위한 `EmailService` 추가 및 SMTP 설정 적용
- `authController`에 비밀번호 찾기 API (`/auth/find-password`) 추가
- 사용자의 이메일 존재 여부를 확인하는 로직 구현 (`authService.findPasswordByEmail`)

--- a/be/build.gradle
+++ b/be/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
 
+    //mail service
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 }
 
 tasks.named('test') {
