S12P11E104-438 Refactor: Flask gunicorn logger 사용

--- a/ai/Dockerfile
+++ b/ai/Dockerfile
@@ -21,4 +21,4 @@ COPY . .
 EXPOSE 5000
 
 # Gunicorn으로 Flask 서버 실행
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "run:app"]
+CMD ["gunicorn", "--preload", "-w", "4", "-b", "0.0.0.0:5000", "run:app"]
