S12P11E104-449 Feat: 발음 영상 파일 추가 및 nginx 정적 파일 접근 프록시 설정 추가

--- a/fe/nginx/default.conf
+++ b/fe/nginx/default.conf
@@ -17,10 +17,15 @@ server {
     }
 
     location /flask/ {
-        proxy_pass http://flask:5000/;  # ✅ 도커 네트워크의 spring 컨테이너로 연결
+        proxy_pass http://flask:5000/;  # ✅ 도커 네트워크의 flask 컨테이너로 연결
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /static/ {
+        root /home/ubuntu/app/static/;
+        autoindex on;
     }
 
     # 서비스 워커 캐싱 방지 (최신 버전 유지)
