Refactor: nginx 설정 변경

--- a/fe/nginx/default.conf
+++ b/fe/nginx/default.conf
@@ -23,6 +23,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /static/ {
+        root /usr/share/nginx/html/static/;
+        autoindex on;  # 파일 목록 보이기 (필요하면 삭제)
+    }
+
     # 서비스 워커 캐싱 방지 (최신 버전 유지)
     location /sw.js {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
